test/conformance/kuttl/generate-validating-admission-policy/clusterpolicy/cornercases/check-deletion-of-vaps-after-modifying-kyverno-policy/03-update-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- updated-policy.yaml
assert:
- policy-assert.yaml
