test/conformance/kuttl/generate-validating-admission-policy/clusterpolicy/cornercases/check-deletion-of-vaps-after-modifying-kyverno-policy/04-check-validatingadmissionpolicy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
error:
- validatingadmissionpolicy.yaml
- validatingadmissionpolicybinding.yaml
