test/conformance/kuttl/generate-validating-admission-policy/clusterpolicy/cornercases/check-deletion-of-vaps-after-modifying-kyverno-policy/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: disallow-host-path-cel-binding
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: disallow-host-path-cel
spec:
  policyName: disallow-host-path-cel
  validationActions: [Deny]
